--- a/event-details.html
+++ b/event-details.html
@@ -19,13 +19,13 @@
 
 			<div id="body-container">
 				<div id="content">
-					<strong>Welcome Party</strong><br />
+					<strong>&mdash; Welcome Party &mdash;</strong><br />
 					Friday, April 19, 6:00pm<br />
 					Fifth Hammer Brewing<br />
 					10-28 46th Ave, Long Island City, NY 11101<br />
 					<em>Attire: Casual. Yes, really - jeans are totally fine!</em><br /><br />
 
-					<strong>Reception</strong><br />
+					<strong>&mdash; Reception &mdash;</strong><br />
 					Saturday, April 20, 5:00pm<br />
 					Metropolitan Building<br />
 					44-01 11th St, Long Island City, NY 11101<br />
