--- a/where-to-stay.html
+++ b/where-to-stay.html
@@ -19,12 +19,12 @@
 
 			<div id="body-container">
 				<div id="content">
-					<strong>Ravel Hotel</strong><br />
+					<strong>&mdash; Ravel Hotel &mdash;</strong><br />
 					8-08 Queens Plaza S, Long Island City, NY 11101<br />
 					Room Block: Rideout-Ziccarelli<br />
 					​(must book by March 20)<br /><br />	
 
-					<strong>Z NYC Hotel</strong><br />
+					<strong>&mdash; Z NYC Hotel &mdash;</strong><br />
 					11-01 43rd Ave, Long Island City, NY 11101
 
 ​
