--- a/event-details.html
+++ b/event-details.html
@@ -30,8 +30,15 @@
 					Metropolitan Building<br />
 					44-01 11th St, Long Island City, NY 11101<br />
 					<em>Attire: Cocktail, meaning short dresses and jumpsuits are encouraged. If you're wearing slacks and a button down, ties are optional but you'll probably want to wear a jacket.</em><br />
-
 				</div>
+
+
+			</div>
+
+			<div id="foot-container">
+				<svg height="5" width="400"><line x1="0" y1="0" x2="400" y2="0" style="stroke:rgb(0,0,0);stroke-width:2" />
+</svg> <strong>Chrissy + Brian</strong> <svg height="5" width="400"><line x1="0" y1="0" x2="400" y2="0" style="stroke:rgb(0,0,0);stroke-width:2" /><br />
+				est. 2011</center>
 			</div>
 		</div>
 
