--- a/registry.html
+++ b/registry.html
@@ -24,6 +24,12 @@
 					If you would really like to get us something, we'd appreciate a monetary gift to put toward our honeymoon. You can mail us cash or a check (or just bring it to the reception). You can also Venmo us @The-Riderellis.
 				</div>
 			</div>
+
+			<div id="foot-container">
+				<svg height="5" width="400"><line x1="0" y1="0" x2="400" y2="0" style="stroke:rgb(0,0,0);stroke-width:2" />
+</svg> <strong>Chrissy + Brian</strong> <svg height="5" width="400"><line x1="0" y1="0" x2="400" y2="0" style="stroke:rgb(0,0,0);stroke-width:2" /><br />
+				est. 2011</center>
+			</div>
 		</div>
 
 	</body>
