--- a/riderelli.html
+++ b/riderelli.html
@@ -27,6 +27,12 @@
 
 				</div>
 			</div>
+
+			<div id="foot-container">
+				<svg height="5" width="400"><line x1="0" y1="0" x2="400" y2="0" style="stroke:rgb(0,0,0);stroke-width:2" />
+</svg> <strong>Chrissy + Brian</strong> <svg height="5" width="400"><line x1="0" y1="0" x2="400" y2="0" style="stroke:rgb(0,0,0);stroke-width:2" /><br />
+				est. 2011</center>
+			</div>
 		</div>	
 	</body>
 	
