--- a/rsvp.html
+++ b/rsvp.html
@@ -19,14 +19,20 @@
 
 			<div id="body-container">
 				<div id="content">
-					<strong>If you received a Google Calendar invitation for Friday and/or Saturday</strong>, just click Yes/No/Maybe directly in the invite. We're not taking your response as a firm commitment yet, we just want an intial headcount.<br /><br />
+					<strong>&mdash; If you received a Google Calendar invitation &mdash;</strong><br />Just click Yes/No/Maybe directly in the invite. We're not taking your response as a firm commitment yet, we just want an intial headcount.<br /><br />
 
-					<strong>If you received a save the date in the mail</strong>, you don't have to do anything! But if you're so excited to attend you want to tell us anyway, just call or text Brian or Chrissy.<br /><br />
+					<strong>&mdash; If you received a save the date in the mail &mdash;</strong><br />You don't have to do anything! But if you're so excited to attend you want to tell us anyway, just call or text Brian or Chrissy.<br /><br />
 
 					We'll send <em>everyone</em> an email when we need formal RSVPs in January. If you aren't sure we have your email address, please make our lives easier and send it to us when you get the chance.
 
 
 				</div>
+			</div>
+
+			<div id="foot-container">
+				<svg height="5" width="400"><line x1="0" y1="0" x2="400" y2="0" style="stroke:rgb(0,0,0);stroke-width:2" />
+</svg> <strong>Chrissy + Brian</strong> <svg height="5" width="400"><line x1="0" y1="0" x2="400" y2="0" style="stroke:rgb(0,0,0);stroke-width:2" /><br />
+				est. 2011</center>
 			</div>
 		</div>
 
