--- a/where-to-stay.html
+++ b/where-to-stay.html
@@ -26,10 +26,13 @@
 
 					<strong>&mdash; Z NYC Hotel &mdash;</strong><br />
 					11-01 43rd Ave, Long Island City, NY 11101
-
-​
-
 				</div>
+			</div>
+
+			<div id="foot-container">
+				<svg height="5" width="400"><line x1="0" y1="0" x2="400" y2="0" style="stroke:rgb(0,0,0);stroke-width:2" />
+</svg> <strong>Chrissy + Brian</strong> <svg height="5" width="400"><line x1="0" y1="0" x2="400" y2="0" style="stroke:rgb(0,0,0);stroke-width:2" /><br />
+				est. 2011</center>
 			</div>
 		</div>
 
