--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 	<head>
 	  <link rel="stylesheet" href="riderelli.css">
@@ -7,7 +8,7 @@
 		<div id="container">
 			<div id="sidebar">
 				<div id="menu">
-					<a href="riderelli.html"><img src="event-details.png" width="200px"></a><br/><br/>
+					<a href="index.html"><img src="event-details.png" width="200px"></a><br/><br/>
 					<a href="our-story.html">&nbsp; &nbsp; &nbsp; &nbsp;our story</a><br/>
 					<a href="event-details.html">&nbsp; &nbsp; &nbsp; &nbsp;event details</a><br/>
 					<a href="where-to-stay.html">&nbsp; &nbsp; &nbsp; &nbsp;where to stay</a><br/>
@@ -18,12 +19,19 @@
 
 			<div id="body-container">
 				<div id="content">
+
 					<p>Started from the bottom*, now we here.</p>
 
 					<p>*Literally, we met in a basement.</p>
 
 
 				</div>
+			</div>
+
+			<div id="foot-container">
+				<svg height="5" width="400"><line x1="0" y1="0" x2="400" y2="0" style="stroke:rgb(0,0,0);stroke-width:2" />
+</svg> <strong>Chrissy + Brian</strong> <svg height="5" width="400"><line x1="0" y1="0" x2="400" y2="0" style="stroke:rgb(0,0,0);stroke-width:2" /><br />
+				est. 2011</center>
 			</div>
 		</div>	
 	</body>
