--- a/riderelli.html
+++ b/riderelli.html
@@ -8,7 +8,7 @@
 		<div id="container">
 			<div id="sidebar">
 				<div id="menu">
-					<a href="riderelli.html"><img src="event-details.png" width="200px"></a><br/><br/>
+					<a href="riderelli.html"><img src="riderelli.png" width="200px"></a><br/><br/>
 					<a href="our-story.html">&nbsp; &nbsp; &nbsp; &nbsp;our story</a><br/>
 					<a href="event-details.html">&nbsp; &nbsp; &nbsp; &nbsp;event details</a><br/>
 					<a href="where-to-stay.html">&nbsp; &nbsp; &nbsp; &nbsp;where to stay</a><br/>
