--- a/event-details.html
+++ b/event-details.html
@@ -20,16 +20,16 @@
 			<div id="body-container">
 				<div id="content">
 					<strong>&mdash; Welcome Party &mdash;</strong><br />
-					Friday, April 19, 6:00pm<br />
-					Fifth Hammer Brewing<br />
+					Friday, April 19<br />
+					Location TBD<br />
 					10-28 46th Ave, Long Island City, NY 11101<br />
 					<em>Attire: Casual. Yes, really - jeans are totally fine!</em><br /><br />
 
 					<strong>&mdash; Reception &mdash;</strong><br />
-					Saturday, April 20, 5:00pm<br />
+					Saturday, April 20<br />
 					Metropolitan Building<br />
 					44-01 11th St, Long Island City, NY 11101<br />
-					<em>Attire: Cocktail, meaning short dresses and jumpsuits are encouraged. If you're wearing slacks and a button down, ties are optional but you'll probably want to wear a jacket.</em><br />
+					<em>Attire: Cocktail</em><br />
 				</div>
 
 
