--- a/registry.html
+++ b/registry.html
@@ -21,7 +21,7 @@
 				<div id="content">
 					We aren't registered anywhere because we already own a vacuum and don't have the counter space for a KitchenAid mixer. Plus, your presence is gift enough!<br /><br />
 
-					If you would really like to get us something, we'd appreciate a monetary gift to put toward our honeymoon. You can mail us cash or a check (or just bring it to the reception). You can also Venmo us @The-Riderellis.
+					If you would really like to get us something, we'd appreciate a monetary gift to put toward our honeymoon. You can mail us cash or a check (or just bring it to the reception). We'll create a Venmo for those of you who are averse to paper money.
 				</div>
 			</div>
 
