--- a/where-to-stay.html
+++ b/where-to-stay.html
@@ -21,11 +21,13 @@
 				<div id="content">
 					<strong>&mdash; Ravel Hotel &mdash;</strong><br />
 					8-08 Queens Plaza S, Long Island City, NY 11101<br />
-					Room Block: Rideout-Ziccarelli<br />
-					​(must book by March 20)<br /><br />	
+					Provide the name "Rideout-Ziccarelli" to join our room block (must book by March 20)<br />
+					<em>We recommend the King Superior Balcony for couples and the Double Queen Superior Balcony for groups of 3-4</em><br /><br />	
 
 					<strong>&mdash; Z NYC Hotel &mdash;</strong><br />
-					11-01 43rd Ave, Long Island City, NY 11101
+					11-01 43rd Ave, Long Island City, NY 11101<br /><br />
+					
+					There are plenty of other hotel options in Long Island City and the surrounding area. Manhattan, Brooklyn, and the rest of Queens are a quick cab or train away.
 				</div>
 			</div>
 
