--- a/event-details.html
+++ b/event-details.html
@@ -20,12 +20,13 @@
 			<div id="body-container">
 				<div id="content">
 					<strong>&mdash; Welcome Party &mdash;</strong><br />
-					Friday, April 19<br />
-					Location TBD<br />
+					Friday, April 19, 7-9pm<br />
+					Alewife Taproom<br />
+					5-14 51st Ave, Long Island City, NY 11101
 					<em>Attire: Casual. Yes, really - jeans are totally fine!</em><br /><br />
 
 					<strong>&mdash; Reception &mdash;</strong><br />
-					Saturday, April 20<br />
+					Saturday, April 20, 6pm<br />
 					Metropolitan Building<br />
 					44-01 11th St, Long Island City, NY 11101<br />
 					<em>Attire: Cocktail</em><br />
