--- a/event-details.html
+++ b/event-details.html
@@ -22,7 +22,7 @@
 					<strong>&mdash; Welcome Party &mdash;</strong><br />
 					Friday, April 19, 7-9pm<br />
 					Alewife Taproom<br />
-					5-14 51st Ave, Long Island City, NY 11101
+					5-14 51st Ave, Long Island City, NY 11101<br />
 					<em>Attire: Casual. Yes, really - jeans are totally fine!</em><br /><br />
 
 					<strong>&mdash; Reception &mdash;</strong><br />
