--- a/rsvp.html
+++ b/rsvp.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 	<head>
 	  <link rel="stylesheet" href="riderelli.css">
@@ -18,14 +17,11 @@
 			</div>
 
 			<div id="body-container">
-				<div id="content">
-					<strong>&mdash; If you received a Google Calendar invitation &mdash;</strong><br />Just click Yes/No/Maybe directly in the invite. We're not taking your response as a firm commitment yet, we just want an intial headcount.<br /><br />
 
-					<strong>&mdash; If you received a save the date in the mail &mdash;</strong><br />You don't have to do anything! But if you're so excited to attend you want to tell us anyway, just call or text Brian or Chrissy.<br /><br />
+				<div id="rsvp-content">
+					<script type="text/javascript" src="http://app.rsvpify.com/embed/500179990" scrolling="yes"></script><script type="text/javascript" src="http://app.rsvpify.com/js/iframeResizer.min.js"></script><script type="text/javascript">iFrameResize({autoResize: true,checkOrigin: false,heightCalculationMethod: 'max', enablePublicMethods: true}, "#RSVPifyIFrame");</script>
 
-					We'll send <em>everyone</em> an email when we need formal RSVPs in January. If you aren't sure we have your email address, please make our lives easier and send it to us when you get the chance.
-
-
+					<center>If you can't see the form above, <a href="http://theriderellis.rsvpify.com" target="_blank"><u>click here to RSVP</u></a>.</center>
 				</div>
 			</div>
 
