--- a/rsvp.html
+++ b/rsvp.html
@@ -18,7 +18,7 @@
 
 			<div id="body-container">
 
-				<div id="rsvp-content">
+				<div id="content">
 					<script type="text/javascript" src="http://app.rsvpify.com/embed/500179990" scrolling="yes"></script><script type="text/javascript" src="http://app.rsvpify.com/js/iframeResizer.min.js"></script><script type="text/javascript">iFrameResize({autoResize: true,checkOrigin: false,heightCalculationMethod: 'max', enablePublicMethods: true}, "#RSVPifyIFrame");</script>
 
 					<center>If you can't see the form above, <a href="http://theriderellis.rsvpify.com" target="_blank"><u>click here to RSVP</u></a>.</center>
