--- a/rsvp.html
+++ b/rsvp.html
@@ -19,12 +19,7 @@
 
 			<div id="body-container">
 				<div id="content">
-					<strong>&mdash; If you received a Google Calendar invitation &mdash;</strong><br />Just click Yes/No/Maybe directly in the invite. We're not taking your response as a firm commitment yet, we just want an intial headcount.<br /><br />
-
-					<strong>&mdash; If you received a save the date in the mail &mdash;</strong><br />You don't have to do anything! But if you're so excited to attend you want to tell us anyway, just call or text Brian or Chrissy.<br /><br />
-
-					We'll send <em>everyone</em> an email when we need formal RSVPs in January. If you aren't sure we have your email address, please make our lives easier and send it to us when you get the chance.
-
+					<strong>&mdash; It's time to commit &mdash;</strong><br />Please head to <a href="http://theriderellis.rsvpify.com"><u>http://theriderellis.rsvpify.com</u></a> for more details and to let us know you're celebrating with us.<br /><br />
 
 				</div>
 			</div>
