--- a/rsvp.html
+++ b/rsvp.html
@@ -19,7 +19,7 @@
 
 			<div id="body-container">
 				<div id="content">
-					<strong>&mdash; It's time to commit &mdash;</strong><br />Please head to <a href="http://theriderellis.rsvpify.com"><u>http://theriderellis.rsvpify.com</u></a> for more details and to let us know you're celebrating with us.<br /><br />
+					<strong>&mdash; It's time to commit &mdash;</strong><br />Please head to <a href="http://theriderellis.rsvpify.com"><u>http://theriderellis.rsvpify.com</u></a> for more details and to let us know if you'll be celebrating with us.<br /><br />
 
 				</div>
 			</div>
