Updated titles and favicons

--- a/event-details.html
+++ b/event-details.html
@@ -2,6 +2,8 @@
 <!doctype html>
 	<head>
 	  <link rel="stylesheet" href="riderelli.css">
+	  <title>Event Details - Chrissy and Brian</title>
+	  <link rel="shortcut icon" type="image/png" href="hop-vine.png"/>
 	</head>
 
 	<body>
