--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!doctype html>
 	<head>
 	  <link rel="stylesheet" href="riderelli.css">
+	  <title>Chrissy and Brian are getting married!</title>
+	  <link rel="shortcut icon" type="image/png" href="hop-vine.png"/>
 	</head>
 
 	<body>
