--- a/our-story.html
+++ b/our-story.html
@@ -2,6 +2,8 @@
 <!doctype html>
 	<head>
 	  <link rel="stylesheet" href="riderelli.css">
+	  <title>Our Story - Chrissy and Brian</title>
+	  <link rel="shortcut icon" type="image/png" href="hop-vine.png"/>
 	</head>
 
 	<body>
@@ -27,7 +29,7 @@
 
 					Reunited in the Big Apple, Chrissy and Brian took a year to settle in and begin to explore the monstorous city. On the anniversary of Brian's move after a dinner of fried chicken, Chrissy asked him to marry her over kitschy cocktails in Nolita. Brian said yes.<br /><br />
 
-					A month later, Chrissy had to ask again because she wasn't sure he knew she was "like, within the next year" serious. 
+					A month later, Chrissy had to ask again because she wasn't sure he knew she was "like, within the next year" serious. Then she made the spreadsheet that brought us all here today.
 				</div>
 			</div>
 
