--- a/registry.html
+++ b/registry.html
@@ -2,6 +2,8 @@
 <!doctype html>
 	<head>
 	  <link rel="stylesheet" href="riderelli.css">
+	  <title>Registry - Chrissy and Brian</title>
+	  <link rel="shortcut icon" type="image/png" href="hop-vine.png"/>
 	</head>
 
 	<body>
@@ -21,7 +23,7 @@
 				<div id="content">
 					We aren't registered anywhere because we already own a vacuum and don't have the counter space for a KitchenAid mixer. Plus, your presence is gift enough!<br /><br />
 
-					If you would really like to get us something, we'd appreciate a monetary gift to put toward our honeymoon. You can mail us cash or a check (or just bring it to the reception). We'll create a Venmo for those of you who are averse to paper money.
+					If you would really like to get us something, let us know so we can provide shipping info. Otherwise, we'd appreciate a monetary gift to put toward our honeymoon. We'll create a Venmo for those of you who are averse to cash or checks.
 				</div>
 			</div>
 
