--- a/rsvp.html
+++ b/rsvp.html
@@ -2,6 +2,8 @@
 <!doctype html>
 	<head>
 	  <link rel="stylesheet" href="riderelli.css">
+	  <title>RSVP - Chrissy and Brian</title>
+	  <link rel="shortcut icon" type="image/png" href="hop-vine.png"/>
 	</head>
 
 	<body>
@@ -19,7 +21,8 @@
 
 			<div id="body-container">
 				<div id="content">
-					<strong>&mdash; It's time to commit &mdash;</strong><br />Please head to <a href="http://theriderellis.rsvpify.com" target="_blank"><u>http://theriderellis.rsvpify.com</u></a> for more details and to let us know if you'll be celebrating with us.<br /><br />
+					<strong>&mdash; It's time to commit &mdash;</strong><br />
+					Please head to <a href="http://theriderellis.rsvpify.com" target="_blank"><u>http://theriderellis.rsvpify.com</u></a> for more details and to let us know if you'll be celebrating with us.<br /><br />
 
 				</div>
 			</div>
