--- a/where-to-stay.html
+++ b/where-to-stay.html
@@ -2,6 +2,8 @@
 <!doctype html>
 	<head>
 	  <link rel="stylesheet" href="riderelli.css">
+	  <title>Where to Stay - Chrissy and Brian</title>
+	  <link rel="shortcut icon" type="image/png" href="hop-vine.png"/>
 	</head>
 
 	<body>
@@ -29,6 +31,7 @@
 					11-01 43rd Ave, Long Island City, NY 11101<br />
 					No room block here, but it's equidistant from the venue as Ravel<br /><br />
 					
+					<strong>&mdash; For You AirBnB Types &mdash;</strong><br />
 					There are plenty of other hotel options in Long Island City and the surrounding area. Manhattan, Brooklyn, and the rest of Queens are a quick cab or train away.
 				</div>
 			</div>
