Update shipping info

--- a/registry.html
+++ b/registry.html
@@ -23,7 +23,7 @@
 				<div id="content">
 					We aren't registered anywhere because we already own a vacuum and don't have the counter space for a KitchenAid mixer. Plus, your presence is gift enough!<br /><br />
 
-					If you would really like to get us something, let us know so we can provide shipping info. Otherwise, we'd appreciate a monetary gift to put toward our honeymoon. We'll create a Venmo for those of you who are averse to cash or checks.
+					If you would really like to get us something, let us know so we can provide secure shipping info. Otherwise, we'd appreciate a monetary gift to put toward our honeymoon. We'll create a Venmo for those of you who are averse to cash or checks.
 				</div>
 			</div>
 
