--- a/our-story.html
+++ b/our-story.html
@@ -23,7 +23,7 @@
 				<div id="content">
 					Back in 2011, Chrissy and Brian found themselves doing what most econ majors and law school graduates were doing at that time: waiting tables. Despite some initial stand-offishness from Chrissy, Brian quickly won her over with a helping hand at the crossword puzzles she would do on slow nights.<br /><br />
 
-					After hanging up their serving aprons, Chrissy and Brian continued to hang out, exploring DC by bike, grilling at home, and seeing more live music than is good for one's hearing. They'd expand their horizons over the next few years, visiting Guatemala, Montreal, Tulum, and many visits to Chicago, Philly, and New York.<br /><br />
+					After hanging up their serving aprons, Chrissy and Brian continued to hang out, exploring DC by bike, grilling at home, and seeing more live music than is good for one's hearing. They'd expand their horizons over the next few years, visiting Guatemala, Montreal, Tulum, Chicago, Philly, and a bunch of other places.<br /><br />
 
 					In 2015, Chrissy moved to New York to pursue a new job with Girls Who Code. She and Brian shuffled back and forth between the two cities until 2017, when Brian was offered a job at The New York Times (he took it).<br /><br />
 
