--- a/registry.html
+++ b/registry.html
@@ -21,9 +21,12 @@
 
 			<div id="body-container">
 				<div id="content">
-					We aren't registered anywhere because we already own a vacuum and don't have the counter space for a KitchenAid mixer. Plus, your presence is gift enough!<br /><br />
+					We aren't registered for any physical gifts because we already own a vacuum and don't have the counter space for a KitchenAid mixer. However, we you can provide us cash gift in person or through our <a href="https://zola.com/registry/brianandchrissy2019" target="_blank"><u>Zola registry.</u><a/><br /><br />
 
-					If you would really like to get us something, let us know so we can provide secure shipping info. Otherwise, we'd appreciate a monetary gift to put toward our honeymoon. We'll create a Venmo for those of you who are averse to cash or checks.
+					If you would really like to get us something, let us know so we can provide secure shipping info. <br /><br />
+
+					<a class="zola-registry-embed" href="www.zola.com/registry/brianandchrissy2019" data-registry-key="Chrissy and Brian's Honeymoon Fund">Our Zola Wedding Registry</a><script>!function(e,t,n){var s,a=e.getElementsByTagName(t)[0];e.getElementById(n)||(s=e.createElement(t),s.id=n,s.async=!0,s.src="https://widget.zola.com/js/widget.js",a.parentNode.insertBefore(s,a))}(document,"script","zola-wjs");</script>
+
 				</div>
 			</div>
 
