Added registry, updated story

--- a/what-to-do.html
+++ b/what-to-do.html
@@ -2,7 +2,7 @@
 <!doctype html>
 	<head>
 	  <link rel="stylesheet" href="riderelli.css">
-	  <title>Registry - Chrissy and Brian</title>
+	  <title>Chrissy and Brian are getting married!</title>
 	  <link rel="shortcut icon" type="image/png" href="hop-vine.png"/>
 	</head>
 
@@ -10,7 +10,7 @@
 		<div id="container">
 			<div id="sidebar">
 				<div id="menu">
-					<a href="index.html"><img src="registry.png" width="200px"></a><br/><br/>
+					<a href="index.html"><img src="riderelli.png" width="200px"></a><br/><br/>
 					<a href="our-story.html">&nbsp; &nbsp; &nbsp; &nbsp;our story</a><br/>
 					<a href="event-details.html">&nbsp; &nbsp; &nbsp; &nbsp;event details</a><br/>
 					<a href="where-to-stay.html">&nbsp; &nbsp; &nbsp; &nbsp;where to stay</a><br/>
@@ -21,9 +21,21 @@
 
 			<div id="body-container">
 				<div id="content">
-					We aren't registered for any physical gifts because we already own a vacuum and don't have the counter space for a KitchenAid mixer. However, you can fund experiences we have planned for our honeymoon through our <a href="http://zola.com/registry/brianandchrissy2019" target="_blank"><u>Zola registry.</u><a/><br /><br />
 
-					If you would really like to get us a traditional gift, let us know so we can provide secure shipping info. <br /><br />
+					<strong>&mdash; PIZZA &mdash;</strong><br />
+					Joe's Pizza
+
+					NY Pizza Suprema
+
+					Scarr's Pizza
+
+					Prince Street Pizza
+
+					<strong>&mdash; PIZZA &mdash;</strong><br />
+
+					Xian's Famous Foods
+
+
 				</div>
 			</div>
 
@@ -32,8 +44,7 @@
 </svg> <strong>Chrissy + Brian</strong> <svg height="5" width="400"><line x1="0" y1="0" x2="400" y2="0" style="stroke:rgb(0,0,0);stroke-width:2" /><br />
 				est. 2011</center>
 			</div>
-		</div>
-
+		</div>	
 	</body>
 	
 </html>
