--- a/our-story.html
+++ b/our-story.html
@@ -15,7 +15,8 @@
 					<a href="event-details.html">&nbsp; &nbsp; &nbsp; &nbsp;event details</a><br/>
 					<a href="where-to-stay.html">&nbsp; &nbsp; &nbsp; &nbsp;where to stay</a><br/>
 					<a href="registry.html">&nbsp; &nbsp; &nbsp; &nbsp;registry</a><br/>
-					<a href="rsvp.html">&nbsp; &nbsp; &nbsp; &nbsp;rsvp</a>
+					<a href="rsvp.html">&nbsp; &nbsp; &nbsp; &nbsp;rsvp</a><br />
+					<a href="photos.html">&nbsp; &nbsp; &nbsp; &nbsp;photos & memories</a>
 				</div>
 			</div>
 
