Fixed link targets

--- a/photos.html
+++ b/photos.html
@@ -23,10 +23,10 @@
 			<div id="body-container">
 				<div id="content">
 					<strong>&mdash; Photos &mdash;</strong><br />
-					<a href="http://picti.net/QVMu0">You can view, save, and order prints of your favorite memories <u>here</u></a>.<br /><br />
+					<a href="http://picti.net/QVMu0" target="_blank">You can view, save, and order prints of your favorite memories <u>here</u></a>.<br /><br />
 
 					<strong>&mdash; Music &mdash;</strong><br />
-					Maybe our favorite part of planning was putting together all our favorite music to celebrate to. Playlists from <u><a href="https://open.spotify.com/user/chriszee/playlist/2AhJHy3DONx0v85PRtG3xz?si=ddcrf6cTQTS52QkC6DhBTg">Friday night</a></u>, <u><a href="https://open.spotify.com/user/chriszee/playlist/3uIfxNJr9SCeRkULYFsYHn?si=pyeBWF23RA6VJl8pMkvv3A">cocktail hour</a></u>, <u><a href="https://open.spotify.com/user/chriszee/playlist/6p9fEyvjATxmszOyek8SEt?si=RrCEZCUAT8qiKERUAHfE0Q">dinner</a></u>, <a href="https://open.spotify.com/user/chriszee/playlist/2nsZVUJzsRKTbAbAUFxhva?si=BXovBRf7SpqByG2E8yXEgQ"><u>ceremony</u></a>, and <a href="https://open.spotify.com/user/chriszee/playlist/58qsyhWW4hMcjOKIoRM8WY?si=o0Ai6gpkSaqKwihKPUFXjw"><u>the dance floor</u></a> are all public on Spotfy<br /><br />
+					Maybe our favorite part of planning was putting together all our favorite music to celebrate to. Playlists from <u><a href="https://open.spotify.com/user/chriszee/playlist/2AhJHy3DONx0v85PRtG3xz?si=ddcrf6cTQTS52QkC6DhBTg" target="_blank">Friday night</a></u>, <u><a href="https://open.spotify.com/user/chriszee/playlist/3uIfxNJr9SCeRkULYFsYHn?si=pyeBWF23RA6VJl8pMkvv3A" target="_blank">cocktail hour</a></u>, <u><a href="https://open.spotify.com/user/chriszee/playlist/6p9fEyvjATxmszOyek8SEt?si=RrCEZCUAT8qiKERUAHfE0Q" target="_blank">dinner</a></u>, <a href="https://open.spotify.com/user/chriszee/playlist/2nsZVUJzsRKTbAbAUFxhva?si=BXovBRf7SpqByG2E8yXEgQ" target="_blank"><u>ceremony</u></a>, and <a href="https://open.spotify.com/user/chriszee/playlist/58qsyhWW4hMcjOKIoRM8WY?si=o0Ai6gpkSaqKwihKPUFXjw" target="_blank"><u>the dance floor</u></a> are all public on Spotfy<br /><br />
 
 				</div>
 			</div>
